== 0.23.9

== 0.23.8

* Bug Fix
  * Users with now projects favorited should still be able to create stickies

== 0.23.7

* Enhancements
  * Frames have been renamed to Boards
    * Boards no longer include start and end dates
    * Boards can be archived
    * Project pages now only show stickies of active boards
  * Sticky completion emails on groups now highlight the sticky that was completed on the group

* Bug Fix
  * Pagination now works correctly on group pages where groups have more than 50 stickies

== 0.23.6

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript

== 0.23.5

* Enhancements
  * Project JSON API returns whether or not the project has been favorited
  * Project JSON API returns project specific tags

* Bug Fix
  * Sticky links no longer overlap the complete sticky checkmark box on the calendar view
  * When deleting boards, tags, and templates, the user is now redirected to the project specific boards, tags, or templates index
  * Boards now correctly retain the dropdown arrow when switching by selecting a new board from the dropdown
  * Editing template input fields and dropdowns no longer causes the input field to become unselected in IE

== 0.23.4

* Enhancements
  * Project JSON API returns color
  * User JSON API returns user authentication_token, first_name, last_name, email, and id on successful login
  * Increased width of description text areas to be consistent with other text areas

== 0.23.3

* Bug Fix
  * Dragging groups now correctly prompts user to select all, completed, or single sticky
    * Due to a change in Rails 3.2.7 to Rails 3.2.8 how data attributes are specified in divs

== 0.23.2

* Enhancements
  * Updated to Rails 3.2.8

== 0.23.1

* Enhancements
  * Sticky JSON API filters
    * owner_id: me, returns stickies assigned to the current user