@@ -130,7 +130,7 @@ class UsersController < ApplicationController
       @user.update_column :system_admin, params[:user][:system_admin]
       @user.update_column :service_account, params[:user][:service_account]
       @user.update_column :status, params[:user][:status]
-      UserMailer.status_activated(@user).deliver if Rails.env.production? and original_status != @user.status and @user.status = 'active'
+      UserMailer.status_activated(@user).deliver if Rails.env.production? and original_status != @user.status and @user.status == 'active'
       redirect_to(@user, notice: 'User was successfully updated.')
     elsif @user
       render action: "edit"
