@@ -1,5 +1,8 @@
 == 0.23.9
 
+* Bug Fix
+  * User activation emails are no longer sent out when a user's status is changed from pending to inactive
+
 == 0.23.8
 
 * Bug Fix
